--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.0.0",
-    "cordova-plugin-device": "1.1.4",
-    "cordova-plugin-ionic-webview": "^1.1.11",
-    "cordova-plugin-splashscreen": "~4.0.1",
+    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-whitelist": "^1.3.1",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
@@ -48,6 +48,9 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {}
-    }
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
